<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title_text">My Nanodegree Apps!</string>
    <string name="about_title_text">About</string>
    <string name="spotify_button_text">Spotify Streamer</string>
    <string name="scores_app_text">Scores App</string>
    <string name="library_app_text">Library App</string>
    <string name="build_it_button_text">Build It Bigger</string>
    <string name="xyz_button_text">XYZ Reader</string>
    <string name="capstone_button_text">Capstone: My own app</string>
    <string name="toast_message_beginning">"This button will launch "</string>
    <string name="toast_message_end">" app!"</string>
    <string name="about_html_text"><![CDATA[
    <h1>Why this Project?</h1>
    <p>The goals of this project are:</p>
    <p>Build an app layout that showcases the apps I will build across your Nanodegree journey.</p>
    <p>Names of the apps: Spotify Streamer, Super Duo (2 buttons: Football Scores App and Library App),
    Build It Bigger, XYZ Reader, Capstone;</p>
    ]]></string>
</resources>
